# civitdl

./: .gitattributes  .gitignore  License  Makefile  README.md  __main__.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.example  todo.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feat.md  feature_request.md
.github/workflows/: pr.yml  publish.yml  test.yml
custom/: batchfile.txt  example.py  filter.py  model_dict-example.json  sort.py  tags.py  version_dict-example.json
doc/: alias.md  api_key.md  civitconfig.md  civitdl.md  civitmisc.md  config.md  configuration.md  sorter.md
lib/: batch_download.py  dirpaths.py  filters.py  get_lora_api.py  get_lora_id.py  get_model.py  get_model_id.py
lib/utils/: utils.py
src/: __main__.py  get_lora_api.py  get_lora_id.py
src/civitai_batch_download/: batch_download.py  command_line.py  filters.py  get_model.py  get_model_id.py  utils.py
src/civitconfig/: __main__.py
src/civitconfig/args/: argparser.py
src/civitconfig/data/: configjson.py  configmanager.py  setupJson.py
src/civitconfig/data/config/: aliasconfig.py  config.py  defaultconfig.py  sorterconfig.py
src/civitconfig/data/config_class/: _config.py  defaultconfig.py
src/civitdl/: __main__.py  batch_download.py  command_line.py  exceptions.py  get_model.py  sorter_api.py  utils.py
src/civitdl/api/: sorter.py
src/civitdl/args/: argparser.py
src/civitdl/batch/: _get_model.py  _metadata.py  _model.py  batch_download.py
src/civitdl/config/: config.py
src/civitdl/config/sorter/: tags.py
src/civitdl/helper/: utils.py
src/civitdl/helper/sorter/: basic.py
src/civitmisc/: __main__.py
src/civitmisc/args/: argparser.py
src/helpers/: argparse.py  cache.py  cachemanager.py  constants.py  dep.txt  exceptions.py  hashmanager.py  options.py  sourcemanager.py  styler.py  utils.py  validation.py
src/helpers/core/: _validation.py  constants.py  dep.txt  iohelper.py  utils.py
src/helpers/core/_styler/: styler.py
src/helpers/core/_ui/: styler.py
src/helpers/sorter/: basic.py  tags.py  utils.py
src/helpers/vars/: program_constants.py
src/utils/: utils.py
tasks/: clean.py
test/: batchtest1.txt  endtoend.py  requirements.txt
test/data/: batchtest1.txt  errortest1.txt  errortest2.txt
test/data/nestedtest/: batchtest2.txt  errortest3.txt
test/nestedtest/: batchtest2.txt
test/test/: hash.py
