[build-system]

requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "civitdl"
version = "1.2.1"
authors = [ 
   { name = "Owen Truong" } 
]
description = "Package for batch downloading models from civitai.com"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "License"}
keywords = ["civitai", "batch download"]
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/OwenTruong/civitdl"
"Bug Tracker" = "https://github.com/OwenTruong/civitdl/issues"

[project.scripts]
civitdl = "civitdl.command_line:main"