[build-system]

requires = [ "setuptools", "wheel", "build" ]
build-backend = "setuptools.build_meta"

[project]
name = "civitdl"
version = "2.1.0.dev1"
authors = [ 
   { name = "Owen Truong" } 
]
description = "Package for batch downloading models from civitai.com"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "License"}
keywords = ["civitai", "batch download"]
classifiers = [
   "Programming Language :: Python :: 3.8",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/OwenTruong/civitdl"
"Bug Tracker" = "https://github.com/OwenTruong/civitdl/issues"

[project.scripts]
civitdl = "civitdl.__main__:main"
civitconfig = "civitconfig.__main__:main"