[metadata]

name = civitai_batch_download
version = 1.0.0
author = Owen Truong
author_email = 
description = Package for batch downloading models from civitai.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OwenTruong/civitai-batch-download
project_urls =
Bug Tracker = https://github.com/OwenTruong/civitai-batch-download/issues

classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir = 
  =src

packages = civitai_batch_download
python_requires = >=3.6
install_requires =
   requests
   clicks

[options.entry_points]
console_scripts =
    batch-download = civitai_batch_download.command_line:main